--- a/member.html
+++ b/member.html
@@ -52,38 +52,150 @@
     <div id="base" class="">
 
       <!-- Unnamed (组合) -->
-      <div id="u217" class="ax_default">
+      <div id="u193" class="ax_default">
 
         <!-- Unnamed (矩形) -->
-        <div id="u218" class="ax_default _形状">
-          <div id="u218_div" class=""></div>
+        <div id="u194" class="ax_default _形状">
+          <div id="u194_div" class=""></div>
           <!-- Unnamed () -->
-          <div id="u219" class="text" style="display: none; visibility: hidden">
+          <div id="u195" class="text" style="display: none; visibility: hidden">
             <p><span></span></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u220" class="ax_default _形状">
-          <div id="u220_div" class=""></div>
+        <div id="u196" class="ax_default _形状">
+          <div id="u196_div" class=""></div>
           <!-- Unnamed () -->
-          <div id="u221" class="text" style="display: none; visibility: hidden">
+          <div id="u197" class="text" style="display: none; visibility: hidden">
             <p><span></span></p>
           </div>
         </div>
 
         <!-- Unnamed (图片) -->
-        <div id="u222" class="ax_default _图片2">
-          <img id="u222_img" class="img " src="images/login/u117.png"/>
+        <div id="u198" class="ax_default _图片2">
+          <img id="u198_img" class="img " src="images/login/u121.png"/>
+          <!-- Unnamed () -->
+          <div id="u199" class="text" style="display: none; visibility: hidden">
+            <p><span></span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (图片) -->
+        <div id="u200" class="ax_default _图片2">
+          <img id="u200_img" class="img " src="images/login/u123.png"/>
+          <!-- Unnamed () -->
+          <div id="u201" class="text" style="display: none; visibility: hidden">
+            <p><span></span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (图片) -->
+        <div id="u202" class="ax_default _图片2">
+          <img id="u202_img" class="img " src="images/login/u125.png"/>
+          <!-- Unnamed () -->
+          <div id="u203" class="text" style="display: none; visibility: hidden">
+            <p><span></span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (图片) -->
+        <div id="u204" class="ax_default _图片2">
+          <img id="u204_img" class="img " src="images/login/u127.png"/>
+          <!-- Unnamed () -->
+          <div id="u205" class="text" style="display: none; visibility: hidden">
+            <p><span></span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (矩形) -->
+        <div id="u206" class="ax_default _文本段落1">
+          <div id="u206_div" class=""></div>
+          <!-- Unnamed () -->
+          <div id="u207" class="text" style="visibility: visible;">
+            <p><span>85%</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (图片) -->
+        <div id="u208" class="ax_default _图片2">
+          <img id="u208_img" class="img " src="images/login/u131.png"/>
+          <!-- Unnamed () -->
+          <div id="u209" class="text" style="display: none; visibility: hidden">
+            <p><span></span></p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u210" class="ax_default _一级标题">
+        <div id="u210_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u211" class="text" style="visibility: visible;">
+          <p><span>修改密碼</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (文本框) -->
+      <div id="u212" class="ax_default text_field">
+        <input id="u212_input" type="text" value=""/>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u213" class="ax_default label">
+        <div id="u213_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u214" class="text" style="visibility: visible;">
+          <p><span>原本密碼</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (文本框) -->
+      <div id="u215" class="ax_default text_field">
+        <input id="u215_input" type="text" value=""/>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u216" class="ax_default label">
+        <div id="u216_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u217" class="text" style="visibility: visible;">
+          <p><span>新的密碼</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u218" class="ax_default primary_button">
+        <div id="u218_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u219" class="text" style="visibility: visible;">
+          <p><span>確認</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (下拉列表框) -->
+      <div id="u220" class="ax_default droplist">
+        <select id="u220_input">
+          <option value="台灣">台灣</option>
+          <option value="美國">美國</option>
+        </select>
+      </div>
+
+      <!-- Unnamed (组合) -->
+      <div id="u221" class="ax_default">
+
+        <!-- Unnamed (矩形) -->
+        <div id="u222" class="ax_default _形状">
+          <div id="u222_div" class=""></div>
           <!-- Unnamed () -->
           <div id="u223" class="text" style="display: none; visibility: hidden">
             <p><span></span></p>
           </div>
         </div>
 
-        <!-- Unnamed (图片) -->
-        <div id="u224" class="ax_default _图片2">
-          <img id="u224_img" class="img " src="images/login/u119.png"/>
+        <!-- Unnamed (矩形) -->
+        <div id="u224" class="ax_default _形状">
+          <div id="u224_div" class=""></div>
           <!-- Unnamed () -->
           <div id="u225" class="text" style="display: none; visibility: hidden">
             <p><span></span></p>
@@ -108,12 +220,12 @@
           </div>
         </div>
 
-        <!-- Unnamed (矩形) -->
-        <div id="u230" class="ax_default _文本段落1">
-          <div id="u230_div" class=""></div>
+        <!-- Unnamed (图片) -->
+        <div id="u230" class="ax_default _图片2">
+          <img id="u230_img" class="img " src="images/login/u125.png"/>
           <!-- Unnamed () -->
-          <div id="u231" class="text" style="visibility: visible;">
-            <p><span>85%</span></p>
+          <div id="u231" class="text" style="display: none; visibility: hidden">
+            <p><span></span></p>
           </div>
         </div>
 
@@ -125,189 +237,168 @@
             <p><span></span></p>
           </div>
         </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u234" class="ax_default _一级标题">
-        <div id="u234_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u235" class="text" style="visibility: visible;">
-          <p><span>會員編輯˙</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (文本框) -->
-      <div id="u236" class="ax_default text_field">
-        <input id="u236_input" type="text" value=""/>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u237" class="ax_default label">
-        <div id="u237_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u238" class="text" style="visibility: visible;">
-          <p><span>姓名</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (组合) -->
-      <div id="u239" class="ax_default">
 
         <!-- Unnamed (矩形) -->
-        <div id="u240" class="ax_default _形状">
-          <div id="u240_div" class=""></div>
+        <div id="u234" class="ax_default _文本段落1">
+          <div id="u234_div" class=""></div>
           <!-- Unnamed () -->
-          <div id="u241" class="text" style="display: none; visibility: hidden">
-            <p><span></span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (矩形) -->
-        <div id="u242" class="ax_default _形状">
-          <div id="u242_div" class=""></div>
-          <!-- Unnamed () -->
-          <div id="u243" class="text" style="display: none; visibility: hidden">
-            <p><span></span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (图片) -->
-        <div id="u244" class="ax_default _图片2">
-          <img id="u244_img" class="img " src="images/login/u117.png"/>
-          <!-- Unnamed () -->
-          <div id="u245" class="text" style="display: none; visibility: hidden">
-            <p><span></span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (图片) -->
-        <div id="u246" class="ax_default _图片2">
-          <img id="u246_img" class="img " src="images/login/u119.png"/>
-          <!-- Unnamed () -->
-          <div id="u247" class="text" style="display: none; visibility: hidden">
-            <p><span></span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (图片) -->
-        <div id="u248" class="ax_default _图片2">
-          <img id="u248_img" class="img " src="images/login/u121.png"/>
-          <!-- Unnamed () -->
-          <div id="u249" class="text" style="display: none; visibility: hidden">
-            <p><span></span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (图片) -->
-        <div id="u250" class="ax_default _图片2">
-          <img id="u250_img" class="img " src="images/login/u123.png"/>
-          <!-- Unnamed () -->
-          <div id="u251" class="text" style="display: none; visibility: hidden">
-            <p><span></span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (矩形) -->
-        <div id="u252" class="ax_default _文本段落1">
-          <div id="u252_div" class=""></div>
-          <!-- Unnamed () -->
-          <div id="u253" class="text" style="visibility: visible;">
+          <div id="u235" class="text" style="visibility: visible;">
             <p><span>85%</span></p>
           </div>
         </div>
 
         <!-- Unnamed (图片) -->
-        <div id="u254" class="ax_default _图片2">
-          <img id="u254_img" class="img " src="images/login/u127.png"/>
+        <div id="u236" class="ax_default _图片2">
+          <img id="u236_img" class="img " src="images/login/u131.png"/>
           <!-- Unnamed () -->
-          <div id="u255" class="text" style="display: none; visibility: hidden">
+          <div id="u237" class="text" style="display: none; visibility: hidden">
             <p><span></span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u256" class="ax_default _一级标题">
-        <div id="u256_div" class=""></div>
+      <div id="u238" class="ax_default _一级标题">
+        <div id="u238_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u257" class="text" style="visibility: visible;">
-          <p><span>修改密碼</span></p>
+        <div id="u239" class="text" style="visibility: visible;">
+          <p><span>會員資料˙</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u240" class="ax_default label">
+        <div id="u240_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u241" class="text" style="visibility: visible;">
+          <p><span>姓名</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u242" class="ax_default primary_button">
+        <div id="u242_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u243" class="text" style="visibility: visible;">
+          <p><span>修改完成</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u244" class="ax_default label">
+        <div id="u244_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u245" class="text" style="visibility: visible;">
+          <p><span>蔡帥哥</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u246" class="ax_default label">
+        <div id="u246_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u247" class="text" style="visibility: visible;">
+          <p><span>國家</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u248" class="ax_default label">
+        <div id="u248_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u249" class="text" style="visibility: visible;">
+          <p><span>台灣</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u250" class="ax_default label">
+        <div id="u250_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u251" class="text" style="visibility: visible;">
+          <p><span>性別</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u252" class="ax_default label">
+        <div id="u252_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u253" class="text" style="visibility: visible;">
+          <p><span>男</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (形状) -->
+      <div id="u254" class="ax_default icon">
+        <img id="u254_img" class="img " src="images/member/u254.png"/>
+        <!-- Unnamed () -->
+        <div id="u255" class="text" style="display: none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (形状) -->
+      <div id="u256" class="ax_default icon">
+        <img id="u256_img" class="img " src="images/member/u254.png"/>
+        <!-- Unnamed () -->
+        <div id="u257" class="text" style="display: none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (形状) -->
+      <div id="u258" class="ax_default icon">
+        <img id="u258_img" class="img " src="images/member/u254.png"/>
+        <!-- Unnamed () -->
+        <div id="u259" class="text" style="display: none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (水平线) -->
+      <div id="u260" class="compound ax_default line" WidgetHeight="4" WidgetWidth="90" CompoundMode="true">
+        <img id="u260_img" class="singleImg img " src="images/member/u260.png"/>
+        <div id="u260p000" class="ax_vector_shape" WidgetTopLeftX="-0.478723404255319" WidgetTopLeftY="-0.5" WidgetTopRightX="0.478723404255319" WidgetTopRightY="-0.5" WidgetBottomLeftX="-0.478723404255319" WidgetBottomLeftY="0.5" WidgetBottomRightX="0.478723404255319" WidgetBottomRightY="0.5">
+          <img id="u260p000_img" class="img " src="images/member/u260p000.png"/>
+        </div>
+        <div id="u260p001" class="ax_vector_shape" WidgetTopLeftX="-4.1" WidgetTopLeftY="-0.1" WidgetTopRightX="0.4" WidgetTopRightY="-0.1" WidgetBottomLeftX="-4.1" WidgetBottomLeftY="0.1" WidgetBottomRightX="0.4" WidgetBottomRightY="0.1">
+          <img id="u260p001_img" class="img " src="images/login/u181p001.png"/>
+        </div>
+        <!-- Unnamed () -->
+        <div id="u261" class="text" style="display: none; visibility: hidden">
+          <p><span></span></p>
         </div>
       </div>
 
       <!-- Unnamed (文本框) -->
-      <div id="u258" class="ax_default text_field">
-        <input id="u258_input" type="text" value=""/>
+      <div id="u262" class="ax_default text_field">
+        <input id="u262_input" type="text" value=""/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u259" class="ax_default label">
-        <div id="u259_div" class=""></div>
+      <div id="u263" class="ax_default label">
+        <div id="u263_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u260" class="text" style="visibility: visible;">
-          <p><span>原本密碼</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (文本框) -->
-      <div id="u261" class="ax_default text_field">
-        <input id="u261_input" type="text" value=""/>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u262" class="ax_default label">
-        <div id="u262_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u263" class="text" style="visibility: visible;">
-          <p><span>新的密碼</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u264" class="ax_default primary_button">
-        <div id="u264_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u265" class="text" style="visibility: visible;">
-          <p><span>確認</span></p>
+        <div id="u264" class="text" style="visibility: visible;">
+          <p><span>姓名</span></p>
         </div>
       </div>
 
       <!-- Unnamed (下拉列表框) -->
-      <div id="u266" class="ax_default droplist">
-        <select id="u266_input">
-          <option value="台灣">台灣</option>
-          <option value="美國">美國</option>
+      <div id="u265" class="ax_default droplist">
+        <select id="u265_input">
+          <option value="男">男</option>
+          <option value="女">女</option>
         </select>
       </div>
 
-      <!-- Unnamed (单选按钮) -->
-      <div id="u267" class="ax_default radio_button">
-        <label for="u267_input">
-          <!-- Unnamed () -->
-          <div id="u268" class="text" style="visibility: visible;">
-            <p><span>男</span></p>
-          </div>
-        </label>
-        <input id="u267_input" type="radio" value="radio" name="u267"/>
-      </div>
-
-      <!-- Unnamed (单选按钮) -->
-      <div id="u269" class="ax_default radio_button">
-        <label for="u269_input">
-          <!-- Unnamed () -->
-          <div id="u270" class="text" style="visibility: visible;">
-            <p><span>女</span></p>
-          </div>
-        </label>
-        <input id="u269_input" type="radio" value="radio" name="u269"/>
-      </div>
-
       <!-- Unnamed (矩形) -->
-      <div id="u271" class="ax_default primary_button">
-        <div id="u271_div" class=""></div>
+      <div id="u266" class="ax_default primary_button">
+        <div id="u266_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u272" class="text" style="visibility: visible;">
-          <p><span>完成</span></p>
+        <div id="u267" class="text" style="visibility: visible;">
+          <p><span>修改密碼</span></p>
         </div>
       </div>
     </div>
