--- a/wireframe.html
+++ b/wireframe.html
@@ -287,7 +287,7 @@
                     <div id="u45_div" class=""></div>
                     <!-- Unnamed () -->
                     <div id="u46" class="text" style="visibility: visible;">
-                      <p><span>推薦碼</span></p>
+                      <p><span>推薦碼管理</span></p>
                     </div>
                   </div>
 
@@ -446,6 +446,24 @@
                       <p><span></span></p>
                     </div>
                   </div>
+
+                  <!-- Promotions (矩形) -->
+                  <div id="u80" class="ax_default heading_1" data-label="Promotions">
+                    <div id="u80_div" class=""></div>
+                    <!-- Unnamed () -->
+                    <div id="u81" class="text" style="visibility: visible;">
+                      <p><span>活動</span></p>
+                    </div>
+                  </div>
+
+                  <!-- Promotions Icon (图片) -->
+                  <div id="u82" class="ax_default image" data-label="Promotions Icon">
+                    <img id="u82_img" class="img " src="images/wireframe/promotions_icon_u64.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u83" class="text" style="display: none; visibility: hidden">
+                      <p><span></span></p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -453,60 +471,60 @@
             <!-- Unnamed (Status Bar) -->
 
             <!-- Status Bar (动态面板) -->
-            <div id="u81" class="ax_default" data-label="Status Bar">
-              <div id="u81_state0" class="panel_state" data-label="Status Bar">
-                <div id="u81_state0_content" class="panel_state_content">
+            <div id="u85" class="ax_default" data-label="Status Bar">
+              <div id="u85_state0" class="panel_state" data-label="Status Bar">
+                <div id="u85_state0_content" class="panel_state_content">
 
                   <!-- Status BG Color (矩形) -->
-                  <div id="u82" class="ax_default _形状" data-label="Status BG Color">
-                    <img id="u82_img" class="img " src="images/wireframe/status_bg_color_u82.png"/>
-                    <!-- Unnamed () -->
-                    <div id="u83" class="text" style="display: none; visibility: hidden">
-                      <p><span></span></p>
-                    </div>
-                  </div>
-
-                  <!-- Time (矩形) -->
-                  <div id="u84" class="ax_default _一级标题" data-label="Time">
-                    <div id="u84_div" class=""></div>
-                    <!-- Unnamed () -->
-                    <div id="u85" class="text" style="visibility: visible;">
-                      <p><span style="font-family:'Roboto Bold', 'Roboto';font-weight:700;">1:45</span></p>
-                    </div>
-                  </div>
-
-                  <!-- Status Battery Icon (图片) -->
-                  <div id="u86" class="ax_default _图片" data-label="Status Battery Icon">
-                    <img id="u86_img" class="img " src="images/wireframe/status_battery_icon_u86.png"/>
+                  <div id="u86" class="ax_default _形状" data-label="Status BG Color">
+                    <img id="u86_img" class="img " src="images/wireframe/status_bg_color_u86.png"/>
                     <!-- Unnamed () -->
                     <div id="u87" class="text" style="display: none; visibility: hidden">
                       <p><span></span></p>
                     </div>
                   </div>
 
-                  <!-- Status Wifi Icon (图片) -->
-                  <div id="u88" class="ax_default _图片" data-label="Status Wifi Icon">
-                    <img id="u88_img" class="img " src="images/wireframe/status_wifi_icon_u88.png"/>
+                  <!-- Time (矩形) -->
+                  <div id="u88" class="ax_default _一级标题" data-label="Time">
+                    <div id="u88_div" class=""></div>
                     <!-- Unnamed () -->
-                    <div id="u89" class="text" style="display: none; visibility: hidden">
-                      <p><span></span></p>
+                    <div id="u89" class="text" style="visibility: visible;">
+                      <p><span style="font-family:'Roboto Bold', 'Roboto';font-weight:700;">1:45</span></p>
                     </div>
                   </div>
 
-                  <!-- Status Network Icon (图片) -->
-                  <div id="u90" class="ax_default _图片" data-label="Status Network Icon">
-                    <img id="u90_img" class="img " src="images/wireframe/status_network_icon_u90.png"/>
+                  <!-- Status Battery Icon (图片) -->
+                  <div id="u90" class="ax_default _图片" data-label="Status Battery Icon">
+                    <img id="u90_img" class="img " src="images/wireframe/status_battery_icon_u90.png"/>
                     <!-- Unnamed () -->
                     <div id="u91" class="text" style="display: none; visibility: hidden">
                       <p><span></span></p>
                     </div>
                   </div>
 
-                  <!-- Time (矩形) -->
-                  <div id="u92" class="ax_default _一级标题" data-label="Time">
-                    <div id="u92_div" class=""></div>
+                  <!-- Status Wifi Icon (图片) -->
+                  <div id="u92" class="ax_default _图片" data-label="Status Wifi Icon">
+                    <img id="u92_img" class="img " src="images/wireframe/status_wifi_icon_u92.png"/>
                     <!-- Unnamed () -->
-                    <div id="u93" class="text" style="visibility: visible;">
+                    <div id="u93" class="text" style="display: none; visibility: hidden">
+                      <p><span></span></p>
+                    </div>
+                  </div>
+
+                  <!-- Status Network Icon (图片) -->
+                  <div id="u94" class="ax_default _图片" data-label="Status Network Icon">
+                    <img id="u94_img" class="img " src="images/wireframe/status_network_icon_u94.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u95" class="text" style="display: none; visibility: hidden">
+                      <p><span></span></p>
+                    </div>
+                  </div>
+
+                  <!-- Time (矩形) -->
+                  <div id="u96" class="ax_default _一级标题" data-label="Time">
+                    <div id="u96_div" class=""></div>
+                    <!-- Unnamed () -->
+                    <div id="u97" class="text" style="visibility: visible;">
                       <p><span style="font-family:'Roboto Bold', 'Roboto';font-weight:700;">1:45</span></p>
                     </div>
                   </div>
@@ -515,82 +533,82 @@
             </div>
 
             <!-- Unnamed (动态面板) -->
-            <div id="u94" class="ax_default">
-              <div id="u94_state0" class="panel_state" data-label="White Icons">
-                <div id="u94_state0_content" class="panel_state_content">
+            <div id="u98" class="ax_default">
+              <div id="u98_state0" class="panel_state" data-label="White Icons">
+                <div id="u98_state0_content" class="panel_state_content">
 
                   <!-- BG (矩形) -->
-                  <div id="u95" class="ax_default shape" data-label="BG">
-                    <img id="u95_img" class="img " src="images/wireframe/bg_u95.png"/>
-                    <!-- Unnamed () -->
-                    <div id="u96" class="text" style="display: none; visibility: hidden">
-                      <p><span></span></p>
-                    </div>
-                  </div>
-
-                  <!-- Back (图片) -->
-                  <div id="u97" class="ax_default image" data-label="Back">
-                    <img id="u97_img" class="img " src="images/wireframe/back_u97.png"/>
-                    <!-- Unnamed () -->
-                    <div id="u98" class="text" style="display: none; visibility: hidden">
-                      <p><span></span></p>
-                    </div>
-                  </div>
-
-                  <!-- Home (图片) -->
-                  <div id="u99" class="ax_default image" data-label="Home">
-                    <img id="u99_img" class="img " src="images/wireframe/home_u99.png"/>
+                  <div id="u99" class="ax_default shape" data-label="BG">
+                    <img id="u99_img" class="img " src="images/wireframe/bg_u99.png"/>
                     <!-- Unnamed () -->
                     <div id="u100" class="text" style="display: none; visibility: hidden">
                       <p><span></span></p>
                     </div>
                   </div>
 
-                  <!-- Recent (图片) -->
-                  <div id="u101" class="ax_default image" data-label="Recent">
-                    <img id="u101_img" class="img " src="images/wireframe/recent_u101.png"/>
+                  <!-- Back (图片) -->
+                  <div id="u101" class="ax_default image" data-label="Back">
+                    <img id="u101_img" class="img " src="images/wireframe/back_u101.png"/>
                     <!-- Unnamed () -->
                     <div id="u102" class="text" style="display: none; visibility: hidden">
                       <p><span></span></p>
                     </div>
                   </div>
-                </div>
-              </div>
-              <div id="u94_state1" class="panel_state" data-label="Grey Icons">
-                <div id="u94_state1_content" class="panel_state_content">
 
-                  <!-- BG (矩形) -->
-                  <div id="u103" class="ax_default shape" data-label="BG">
-                    <img id="u103_img" class="img " src="images/wireframe/bg_u103.png"/>
+                  <!-- Home (图片) -->
+                  <div id="u103" class="ax_default image" data-label="Home">
+                    <img id="u103_img" class="img " src="images/wireframe/home_u103.png"/>
                     <!-- Unnamed () -->
                     <div id="u104" class="text" style="display: none; visibility: hidden">
                       <p><span></span></p>
                     </div>
                   </div>
 
-                  <!-- Back (图片) -->
-                  <div id="u105" class="ax_default image" data-label="Back">
-                    <img id="u105_img" class="img " src="images/wireframe/back_u105.png"/>
+                  <!-- Recent (图片) -->
+                  <div id="u105" class="ax_default image" data-label="Recent">
+                    <img id="u105_img" class="img " src="images/wireframe/recent_u105.png"/>
                     <!-- Unnamed () -->
                     <div id="u106" class="text" style="display: none; visibility: hidden">
                       <p><span></span></p>
                     </div>
                   </div>
+                </div>
+              </div>
+              <div id="u98_state1" class="panel_state" data-label="Grey Icons">
+                <div id="u98_state1_content" class="panel_state_content">
 
-                  <!-- Home (图片) -->
-                  <div id="u107" class="ax_default image" data-label="Home">
-                    <img id="u107_img" class="img " src="images/wireframe/home_u107.png"/>
+                  <!-- BG (矩形) -->
+                  <div id="u107" class="ax_default shape" data-label="BG">
+                    <img id="u107_img" class="img " src="images/wireframe/bg_u107.png"/>
                     <!-- Unnamed () -->
                     <div id="u108" class="text" style="display: none; visibility: hidden">
                       <p><span></span></p>
                     </div>
                   </div>
 
-                  <!-- Recent (图片) -->
-                  <div id="u109" class="ax_default image" data-label="Recent">
-                    <img id="u109_img" class="img " src="images/wireframe/recent_u109.png"/>
+                  <!-- Back (图片) -->
+                  <div id="u109" class="ax_default image" data-label="Back">
+                    <img id="u109_img" class="img " src="images/wireframe/back_u109.png"/>
                     <!-- Unnamed () -->
                     <div id="u110" class="text" style="display: none; visibility: hidden">
+                      <p><span></span></p>
+                    </div>
+                  </div>
+
+                  <!-- Home (图片) -->
+                  <div id="u111" class="ax_default image" data-label="Home">
+                    <img id="u111_img" class="img " src="images/wireframe/home_u111.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u112" class="text" style="display: none; visibility: hidden">
+                      <p><span></span></p>
+                    </div>
+                  </div>
+
+                  <!-- Recent (图片) -->
+                  <div id="u113" class="ax_default image" data-label="Recent">
+                    <img id="u113_img" class="img " src="images/wireframe/recent_u113.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u114" class="text" style="display: none; visibility: hidden">
                       <p><span></span></p>
                     </div>
                   </div>
@@ -599,7 +617,7 @@
             </div>
 
             <!-- Place Hot Spot Over Menu Button (热区) -->
-            <div id="u111" class="ax_default" data-label="Place Hot Spot Over Menu Button">
+            <div id="u115" class="ax_default" data-label="Place Hot Spot Over Menu Button">
             </div>
           </div>
         </div>
