[新增] 活動資訊頁

--- a/event.html
+++ b/event.html
@@ -310,6 +310,69 @@
           <p><span>詳細活動頁</span></p>
         </div>
       </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u326" class="ax_default label">
+        <div id="u326_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u327" class="text" style="visibility: visible;">
+          <p><span>Richart 好友禮券</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u328" class="ax_default label">
+        <div id="u328_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u329" class="text" style="visibility: visible;">
+          <p><span>活動時間: 2017/04~05</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u330" class="ax_default label">
+        <div id="u330_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u331" class="text" style="visibility: visible;">
+          <p><span>詳細資訊:</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u332" class="ax_default _文本段落">
+        <div id="u332_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u333" class="text" style="visibility: visible;">
+          <p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget.</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u334" class="ax_default primary_button">
+        <div id="u334_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u335" class="text" style="visibility: visible;">
+          <p><span>導覽</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u336" class="ax_default label">
+        <div id="u336_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u337" class="text" style="visibility: visible;">
+          <p><span>取得獎項: 現金回饋500元</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u338" class="ax_default label">
+        <div id="u338_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u339" class="text" style="visibility: visible;">
+          <p><span>完成所需時間:10 min~ 20 min</span></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
