[新增] 註冊增加大頭照

--- a/login.html
+++ b/login.html
@@ -419,6 +419,54 @@
           <p><span>姓名</span></p>
         </div>
       </div>
+
+      <!-- User (动态面板) -->
+      <div id="u193" class="ax_default" data-label="User">
+        <div id="u193_state0" class="panel_state" data-label="Blue">
+          <div id="u193_state0_content" class="panel_state_content">
+
+            <!-- Unnamed (椭圆形) -->
+            <div id="u194" class="ax_default shape">
+              <img id="u194_img" class="img " src="images/wireframe/u50.png"/>
+              <!-- Unnamed () -->
+              <div id="u195" class="text" style="display: none; visibility: hidden">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (图片) -->
+            <div id="u196" class="ax_default image">
+              <img id="u196_img" class="img " src="images/wireframe/u52.png"/>
+              <!-- Unnamed () -->
+              <div id="u197" class="text" style="display: none; visibility: hidden">
+                <p><span></span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="u193_state1" class="panel_state" data-label="Red">
+          <div id="u193_state1_content" class="panel_state_content">
+
+            <!-- Unnamed (椭圆形) -->
+            <div id="u198" class="ax_default shape">
+              <img id="u198_img" class="img " src="images/wireframe/u54.png"/>
+              <!-- Unnamed () -->
+              <div id="u199" class="text" style="display: none; visibility: hidden">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (图片) -->
+            <div id="u200" class="ax_default image">
+              <img id="u200_img" class="img " src="images/wireframe/u52.png"/>
+              <!-- Unnamed () -->
+              <div id="u201" class="text" style="display: none; visibility: hidden">
+                <p><span></span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
