--- a/login.html
+++ b/login.html
@@ -132,7 +132,7 @@
         <div id="u139_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u140" class="text" style="visibility: visible;">
-          <p><span>註冊</span></p>
+          <p><span>加入會員</span></p>
         </div>
       </div>
 
@@ -231,7 +231,7 @@
 
       <!-- Unnamed (提交按钮) -->
       <div id="u161" class="ax_default html_button">
-        <input id="u161_input" type="submit" value="發送驗證碼"/>
+        <input id="u161_input" type="submit" value="註冊"/>
       </div>
 
       <!-- Unnamed (提交按钮) [footnote] -->
@@ -388,59 +388,11 @@
         </div>
       </div>
 
-      <!-- User (动态面板) -->
-      <div id="u192" class="ax_default" data-label="User">
-        <div id="u192_state0" class="panel_state" data-label="Blue">
-          <div id="u192_state0_content" class="panel_state_content">
-
-            <!-- Unnamed (椭圆形) -->
-            <div id="u193" class="ax_default shape">
-              <img id="u193_img" class="img " src="images/wireframe/u46.png"/>
-              <!-- Unnamed () -->
-              <div id="u194" class="text" style="display: none; visibility: hidden">
-                <p><span></span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (图片) -->
-            <div id="u195" class="ax_default image">
-              <img id="u195_img" class="img " src="images/wireframe/u48.png"/>
-              <!-- Unnamed () -->
-              <div id="u196" class="text" style="display: none; visibility: hidden">
-                <p><span></span></p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="u192_state1" class="panel_state" data-label="Red">
-          <div id="u192_state1_content" class="panel_state_content">
-
-            <!-- Unnamed (椭圆形) -->
-            <div id="u197" class="ax_default shape">
-              <img id="u197_img" class="img " src="images/wireframe/u50.png"/>
-              <!-- Unnamed () -->
-              <div id="u198" class="text" style="display: none; visibility: hidden">
-                <p><span></span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (图片) -->
-            <div id="u199" class="ax_default image">
-              <img id="u199_img" class="img " src="images/wireframe/u48.png"/>
-              <!-- Unnamed () -->
-              <div id="u200" class="text" style="display: none; visibility: hidden">
-                <p><span></span></p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
       <!-- Unnamed (图片) -->
-      <div id="u201" class="ax_default _图片">
-        <img id="u201_img" class="img " src="images/login/u201.jpg"/>
+      <div id="u192" class="ax_default _图片">
+        <img id="u192_img" class="img " src="images/login/u192.jpg"/>
         <!-- Unnamed () -->
-        <div id="u202" class="text" style="display: none; visibility: hidden">
+        <div id="u193" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
