[新增] 新增活動按紐

--- a/login.html
+++ b/login.html
@@ -396,6 +396,18 @@
           <p><span></span></p>
         </div>
       </div>
+
+      <!-- Unnamed (形状) -->
+      <div id="u194" class="ax_default icon">
+        <img id="u194_img" class="img " src="images/login/u194.png"/>
+        <!-- Unnamed () -->
+        <div id="u195" class="text" style="display: none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (形状) [footnote] -->
+      <div id="u194_ann" class="annotation"></div>
     </div>
   </body>
 </html>
